// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractCTA should render correctly when a cancelation is requested 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F5CE22",
      "borderColor": "#F5CE22",
      "borderRadius": 9999,
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 32,
      "justifyContent": "center",
      "opacity": 1,
      "paddingLeft": 16,
      "paddingRight": 16,
    }
  }
>
  <Text
    allowFontScaling={false}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      [
        {
          "color": "#2B1911",
          "fontFamily": "Baloo2-Regular",
          "fontSize": 16,
          "letterSpacing": 0.16,
          "lineHeight": 24,
        },
        [
          {
            "color": "#FFFCFA",
          },
          {
            "fontFamily": "Baloo2-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0.5,
            "lineHeight": 24,
            "minWidth": 96,
            "paddingLeft": 8,
            "paddingRight": 8,
            "textAlign": "center",
            "textTransform": "uppercase",
          },
        ],
      ]
    }
  >
    respond
  </Text>
</View>
`;

exports[`ContractCTA should render payment confirm slider correctly for the seller 1`] = `
<SlideToUnlock
  disabled={true}
  label1="confirm payment"
  label2="payment received"
  onUnlock={[MockFunction]}
  style={
    {
      "width": 263,
    }
  }
/>
`;

exports[`ContractCTA should render the payment confirm slider correctly for the buyer 1`] = `
<SlideToUnlock
  disabled={true}
  label1="I made the payment"
  label2="payment made"
  onUnlock={[MockFunction]}
  style={
    {
      "width": 263,
    }
  }
/>
`;
